Fixed alignment issues on lock icon (#1380)

--- a/src/components/common/screen-lock-indicator/lock-screen-indicator.scss
+++ b/src/components/common/screen-lock-indicator/lock-screen-indicator.scss
@@ -5,5 +5,6 @@
   .lock-icon {
     height: 20px;
     margin-right: 16px;
+    margin-bottom: 6px;
   }
 }
